    * metafile will not touch the META.yml if it does not need to be changed
      (Thanks to Tim Bunce for this idea)
    * Fixed 'make uninstall' which looks like its been broken since last
      November and nobody noticed.
    - Fixing minor bug in VMS prefixification logic when PREFIX was not set
      by the user.
    - Fixing potential bug in prefixification for relative directories

6.17 Sun Sep 14 20:52:45 PDT 2003
    - Fixing LD so it can be set properly on Win32. (Orton Yves)
    * Fixing the init_PERL() "tack $Config{exe_ext} onto $^X" logic so 
      it works on VMS allowing $^X to be found.
    * Fixing make install UNINST=1 on Windows so it can search PERL5LIB
      (Orton Yves)
    - Fixing "could not open MANIFEST" test for OS/2 (and probably others) 
      where a read-only file cannot be deleted.
    - Hacking around the fact that when built for debugging, VMS creates
      ndbgperl.exe.
    - Eliminating the never implemented "help" argument.

6.16 Mon Aug 18 01:39:51 PDT 2003
    * Fixing the max exec length for Windows to account for old
      versions of nmake (the one you can download for free from MS).
    - Hack to normalize //foo//bar paths in ExtUtils::Installed.
      [Sreeji K Das]
    * Adding Module::Build utility files to MANIFEST.SKIP
    - PREREQ_PRINT is supposed to exit after dumping. (Wolfgang Friebel
      bleadperl@20530)
    - maniadd() was trying to open the MANIFEST even if it didn't need to
      causing unnecessary errors for read-only MANIFESTs (rt.cpan.org 3180)

6.15 Sun Aug  3 16:41:05 PDT 2003
    - Make FIXIN on Win32 use the new pl2bat rather than an already
      installed one when building the core (Mattia Barbon)

6.14 Sun Aug  3 16:23:27 PDT 2003
    - Adding a reference to the Module::Build META.yml spec in the META.yml
      itself and the metafile documentation.
    - Removed Begin/End comments from manifypods that were getting in the
      way of users adding code to the manifypods target.